# el-robotics-core

./: .gitignore  CMakeLists.txt  CRCL Extensions_V01_00.docx  Doxyfile.in  README  README.md  README.txt  Robot.h  git-help.txt  git_help.txt  main.cpp  mainpage.dox
AutoGen/: .gitignore  BoxVolume.cpp  BoxVolume.h  BoxyObject.cpp  BoxyObject.h  BoxyShape.cpp  CMakeLists.txt  Connection.cpp  Connection.h  CylindricalShape.cpp  DAO.cpp  DAO.h  DataThing.cpp  DataThing.h  EndEffector.cpp  EndEffector.h  EndEffectorChangingStation.cpp  EndEffectorChangingStation.h  EndEffectorHolder.cpp  EndEffectorHolder.h  ExternalShape.cpp  GripperEffector.cpp  GripperEffector.h  Human.cpp  InternalShape.cpp  Kit.cpp  Kit.h  KitDesign.cpp  KitDesign.h  KitTray.cpp  KitTray.h  KittingWorkstation.cpp  KittingWorkstation.h  LargeBoxWithEmptyKitTrays.cpp  LargeBoxWithEmptyKitTrays.h  LargeBoxWithKits.cpp  LargeBoxWithKits.h  LargeContainer.cpp  LargeContainer.h  Makefile  (+56 more)
AutoGen/database/: BoxVolume.h  BoxyShape.h  CylindricalShape.h  DAO.h  DataThing.h  EndEffector.h  EndEffectorChangingStation.h  EndEffectorHolder.h  ExternalShape.h  GripperEffector.h  Human.h  InternalShape.h  Kit.h  KitDesign.h  KitTray.h  KittingWorkstation.h  LargeBoxWithEmptyKitTrays.h  LargeBoxWithKits.h  LargeContainer.h  MechanicalComponent.h  NoSkuObject.h  Part.h  PartRefAndPose.h  PartsBin.h  PartsTray.h  PartsTrayWithParts.h  PartsVessel.h  PhysicalLocation.h  Point.h  PoseLocation.h  PoseLocationIn.h  PoseLocationOn.h  PoseOnlyLocation.h  README  RelativeLocation.h  RelativeLocationIn.h  RelativeLocationOn.h  Robot.h  ShapeDesign.h  SkuObject.h  (+8 more)
CRCL/: CMakeLists.txt  FromKRC.xml  Makefile  README  ToKRC.xml  cmake_install.cmake  gears.txt  test.crcl  test2.crcl
CRCL/doc/: KukaCRCLInterfaceUsage.docx  table_map.doc
CRCL/etc/: 80-serial.rules
CRCL/schunk_powercube_driver/: CMakeLists.txt
CRCL/src/: _timer.c  crclClient.cpp  crclStatus.cpp  crclUtils.cpp  kukaRobot.cpp  kukaServer.cpp  kukaThread.cpp  kukaThreadArgs.cpp  singleLocation.cpp  statusThread.cpp  timer.cc  trajectoryMaker.cpp
Sensor/sensorcheckWindows/: ALL_BUILD.sdf  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  Project.sln  ZERO_CHECK.vcxproj  cmake_install.cmake  sensorcheck.sdf  sensorcheck.vcxproj.filters
controller/: .gitignore  CMakeLists.txt  Kit1FixedLoc.txt  Makefile  PyramidTest.txt  README  canonicalMsg.hh  commandParser.cpp  commandParser.hh  commandParserMain.cpp  commands1.txt  controller.cpp  controller.hh  kitbuild.txt  myController.cpp  myController.hh  test.cpp  ulapi.cpp  ulapi.hh
controller/binPickup/: scanPattern.cpp
controller/canonicalQueue/: CMakeLists.txt  canonicalMsg.cpp  canonicalMsg.hh  commandParser.cpp  commandParserMain.cpp  controller.cpp  controller.hh  myController.cpp  test.cpp  ulapi.cpp
controller/command/: SmallKitFixedLoc.txt  commands1.txt  reset.txt
controller/controlGUI/: mainwindow.cpp  mainwindow.ui
controller/rosCanonicalController/: CMakeLists.txt  Makefile  README  mainpage.dox  manifest.xml
executor/: .cproject  .gitignore  .project  CMakeLists.txt
executor/Autotools/: Makefile  Makefile.am  Makefile.in  acinclude.m4  bootstrap.sh  config.status  configure  configure.ac
executor/Debug/: makefile  sources.mk
executor/doc/: Doxyfile
executor/include/: CanonicalRobotCommand.hh  DatabaseUpdate.hh  FileOperator.hh  KittingPDDLProblem.hh  KittingPlan.hh  Operator.hh  Tools.hh
executor/interpereter/: IPMAS_db_mysqldump.sql  database_update.txt
executor/src/: CanonicalRobotCommand.cpp  DatabaseUpdate.cpp  FileOperator.cpp  KittingPDDLProblem.cpp  KittingPlan.cpp  Operator.cpp  executor.cpp  main.cc
ipmas/sqlToCollision/: CMakeLists.txt  mainpage.dox  manifest.xml
nist_fanuc/: ActivityJournal.md  CMakeLists (copy).txt  CMakeLists.txt  DeleteTmps.bash  Install.md  README.md  Readme.md  nist_fanuc.cbp  package.xml  rosdoc.yaml
nist_fanuc/doc/: .~lock.ROSRvizJointReaderWriter.docx#  Installation.md  Link to index.html  ROSRvizJointReaderWriter.docx  Readme  Readme.md  RunDoxygen.bash  config.rviz  doxygen.config  fanuclrmateprogram (copy).xml  fanuclrmateprogram.xml  howto.html  manifest.yaml  pythontest
nist_fanuc/launch/: fanucdemo debug.launch  fanucdemo.launch  jointgui.launch  lrmate200id_sim.launch
nist_fanuc/nodes/: Notes.txt  crclclient.py  crclstatuscmdexample.txt  crclstatusexample.txt  joint_states_listener.py  status_listener.py
nist_fanuc/scripts/: fanucdemo.bash  jointgui.bash  rossetup.bash  runrvizdemo.bash
nist_fanuc/src/: AsioCrclServer.cpp  ChainRobotModel.cpp  Communication.cpp  Controller.cpp  Conversions.cpp  CrclInterface.cpp  Globals.cpp  Kinematics.cpp  MotionControl.cpp  Notes.txt  Primitive.cpp  RCS.cpp  RCSInterpreter.cpp  RobotModelUrdf.cpp  RvizMarker.cpp  SanityCheckTests.cpp  Setup.cpp  TestDescartes.cpp  TestMoveit.cpp  Trajectory.cpp  crcl.cpp  demo.cpp  fanucdemo.cpp  moveit.cpp  nist_fanuc.cpp  trajectoryMaker.cpp  urdf_parse_model.cpp
nist_fanuc/test/: crclmathtest.cpp
nist_kitting/: CMakeLists.txt  README.md  package.xml
nist_kitting/launch/: crclsh.launch  emove.launch  irclient_sh.launch  kitting_demo.launch  kitting_demo_2.launch  kitting_pl_hi.launch  simple_message_demo.launch  simple_message_sim.launch
nist_kitting/msg/: emove_cmd.msg  emove_stat.msg  gripper_stat.msg  prim_robot_cmd.msg  prim_robot_moveto.msg  prim_robot_stat.msg  prim_robot_stop.msg  rcs_cmd.msg  rcs_stat.msg  task_cmd.msg  ws_assemble_kit.msg  ws_cmd.msg
nist_kitting/src/: MySQLdbConn.py  aprs_test.py  build_cognex_sim.sh  cognex_db.cpp  cognex_sim.cpp  cognex_sim.txt  crcl.cpp  crcl.py  crcl_client.cpp  crcl_server.cpp  crcl_sim.cpp  crclinterp.py  crclsh.py  crclsim.py  create_aprs_dev_direct_pose_view.sql  crobot.cpp  crobot.py  flexforce.py  flexiforce.py  ini.ini  irclient_sh.cpp  kit.kit  kitting_emove.cpp  kitting_emove.py  kitting_exec.cpp  kitting_hmi.py  kitting_hmi_proxy.cpp  (+27 more)
objectGen/: CMakeLists.txt  kittingInstances.owl  kittingInstances.owlCreateTable.sql
test/: CMakeLists.txt  endEffect.cpp
utils/: CMakeLists.txt  ulapi.hh
(+5666 files in other folders)
