<?xml version="1.0"?>
<package>
  <name>nist_fanuc</name>
  <version>0.0.0</version>
  <description>The nist_fanuc package. </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="john.michaloski@nist.gov">john.michaloski</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>No copyright</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nist_fanuc</url> -->
<url type="website">https://github.com/ros-industrial-consortium</url>
<url type="website">https://github.com/ros-industrial</url>

    <!-- <author email="john.michaloski@nist.gov">John Michaloski</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>descartes_moveit</build_depend>
  <build_depend>descartes_core</build_depend>
 <build_depend>descartes_trajectory</build_depend>
<build_depend>descartes_planner</build_depend>
<build_depend>sensor_msgs</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>moveit_ros_move_group</build_depend>
    <build_depend>moveit_ros_planning</build_depend>
    <build_depend>moveit_ros_manipulation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>descartes_moveit</run_depend>
  <run_depend>descartes_core</run_depend>
 <run_depend>descartes_trajectory</run_depend>
<run_depend>descartes_planner</run_depend>
<run_depend>sensor_msgs</run_depend>
     <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>moveit_ros_move_group</run_depend>
    <run_depend>moveit_ros_planning</run_depend>
    <run_depend>moveit_ros_manipulation</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
